syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

service Sports {
  // ListEvents will return a collection of all sports.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

/* Requests/Responses */
message ListEventsRequest {
  ListEventsRequestFilter filter = 1;
}

// Response to ListEvents call.
message ListEventsResponse {
  repeated Sport sports = 1;
}

// Filter for listing sports.
message ListEventsRequestFilter {
  repeated int64 Id = 1;
}

/* Resources */

// A sports resource.
message Sport {
  // ID represents a unique identifier for the sports.
  int64 id = 1;
  // Name of the sport.
  string name = 2;
  // AdvertisedStartTime is the time the sport is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 3;
  // status
  string status = 4;
}
